--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div class="container main-content" ng-controller="TasksController">
+    <div class="container main-content" ng-controller="TaskController">
 
         <div class="row">
             <div class="col-md-12">
@@ -60,7 +60,6 @@
                     </div>
 
                     <div class="form-group form-inline">
-                        <!--<input type="text" class="form-control" ng-model="new.startDate" placeholder="yyyy/MM/dd hh:mm">-->
                         <input type="datetime-local" class="form-control" ng-value="new.startDate" id="formStartDate">
 
                         <input type="number" class="form-control" ng-model="new.estimatedTime" placeholder="Estimated time...">
@@ -72,7 +71,7 @@
                     </div>
 
                     <div class="form-group form-inline">
-                        <button type="button" class="btn btn-primary btn-md" ng-click="saveTask(myForm.$valid)">Save</button>
+                        <button type="button" class="btn btn-primary btn-md" ng-click="save(myForm.$valid)">Save</button>
                         <button type="button" class="btn btn-secondary btn-md" ng-click="clearSelection()">Cancel</button>
                     </div>
 
@@ -139,7 +138,10 @@
     <script src="assets/angular/js/angular.min.js"></script>
     <script src="assets/jquery/js/jquery-3.3.1.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="main.js"></script>
+
+    <script src="task.module.js"></script>
+    <script src="task.controller.js"></script>
+    <script src="task.service.js"></script>
 
 </body>
 
